# FrankenBrowser

./: .gitignore  .pre-commit-config.yaml  ACTUAL_STATUS.md  ARCHITECTURE.md  BENCHMARK_IMPLEMENTATION_SUMMARY.md  CLAUDE.md  Cargo.toml  FINAL_COMPLETION_REPORT.md  HONEST_COMPLETION_REPORT.md  IMPLEMENTATION_STATUS.md  ORCHESTRATE-FULL-COMPLETION-REPORT.md  PROJECT_COMPLETION_REPORT.md  README.md  SYSTEM_MANIFEST.json  SYSTEM_REQUIREMENTS.md  build.rs  run_wpt.sh  test_new_endpoints.sh  test_webdriver_server.sh
.claude/commands/: README.md  orch-extract-features.md  orch-help.md  orch-internal-contracts.md  orch-internal-integration.md  orch-internal-resume.md  orch-internal-verify.md  orch-onboard.md  orch-reconcile-queue.md  orchestrate-full.md  orchestrate.md
.github/workflows/: benchmark-regression.yml  ci.yml  test-suite.yml  wpt.yml
benchmarks/: Cargo.toml
benchmarks/baselines/: baseline-results.json
benchmarks/benches/: adblock_overhead.rs  memory_usage.rs  page_load.rs  performance.rs  tab_switching.rs
claude-orchestration-system/: README.md
claude-orchestration-system/contracts/: .gitkeep  README.md  data-contract-template.yaml  event-bus-template.yaml  grpc-service-template.proto  rest-api-template.yaml
claude-orchestration-system/docs/: COMPLETION-GUARANTEE-GUIDE.md  COMPONENT-ARCHITECTURE-GUIDE.md  COMPONENT-TYPES.md
claude-orchestration-system/orchestration/: .gitkeep  README.md  __init__.py  claude-orchestration-code.py  claude_code_analyzer.py  dependency_manager.py  orchestration-config.json.template  orchestration_state.py  quality_verifier.py  specification_analyzer.py  template_engine.py
claude-orchestration-system/prompts/: .gitkeep  README.md  create-component.md  setup-project.md
claude-orchestration-system/scripts/: .gitkeep  README.md  embed_templates.py
claude-orchestration-system/templates/: .gitkeep  README.md  bdd-feature-template.feature  component-backend.md  component-frontend.md  component-generic.md  component-integration.md  component-manifest.yaml  health-check-template.py  integration-test-agent.md  master-orchestrator.md  pre-commit-hook.sh  pytest.ini  service_runner.py
claude-orchestration-system/tests/: test_gate_enforcement.py  test_state_discovery.py
components/: .gitkeep
components/adblock_engine/: CLAUDE.md  Cargo.toml  README.md  build.rs  component.yaml
components/adblock_engine/src/: errors.rs  lib.rs  types.rs
components/adblock_engine/tests/: adblock_engine_tests.rs
components/browser_core/: CLAUDE.md  Cargo.toml  README.md  component.yaml
components/browser_core/src/: errors.rs  lib.rs  navigation.rs  types.rs
components/browser_shell/: CLAUDE.md  Cargo.toml  README.md  component.yaml  coverage.txt
components/browser_shell/src/: errors.rs  lib.rs  menu.rs  types.rs  ui_components.rs
components/cli_app/: CLAUDE.md  Cargo.toml  README.md  component.yaml
components/cli_app/src/: errors.rs  lib.rs  main.rs  types.rs
components/config_manager/: CLAUDE.md  Cargo.toml  README.md  component.yaml
components/message_bus/: CLAUDE.md  Cargo.toml  README.md  component.yaml
components/message_bus/src/: errors.rs  lib.rs  types.rs
components/network_stack/: CLAUDE.md  Cargo.toml  README.md  component.yaml
components/network_stack/src/: cache.rs  csp.rs  errors.rs  lib.rs  request_handler.rs  types.rs
components/shared_types/: CLAUDE.md  Cargo.toml  README.md  component.yaml
components/shared_types/src/: errors.rs  lib.rs  types.rs
components/webdriver/: Cargo.toml
components/webdriver/src/: dom_interface.rs  element.rs  errors.rs  lib.rs  script_args.rs  server.rs  session.rs
components/webdriver/tests/: script_execution_tests.rs
components/webview_integration/: CLAUDE.md  Cargo.toml  IMPLEMENTATION.md  README.md  component.yaml
components/webview_integration/src/: errors.rs  javascript_bridge.rs  lib.rs  types.rs
components/webview_integration/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
contracts/: .gitkeep  README.md  browser_core.yaml  message_bus.yaml  shared_types.yaml
docs/: FINAL_SESSION_REPORT_2025-11-15.md  GUI-TESTING-SETUP.md  IMPLEMENTATION_COMPLETE_REPORT.md  IMPLEMENTATION_PLAN.md  MODEL-STRATEGY.md  SESSION_SUMMARY_2025-11-15.md  TEST_IMPLEMENTATION_PLAN.md  WEBDRIVER_IMPLEMENTATION_REPORT.md  WPT_INTEGRATION.md
docs/testing/: EXECUTION_GUIDE.md  MISSING_CAPABILITIES.md  ROADMAP.md
integration_tests/: Cargo.toml  TEST-RESULTS.md
integration_tests/tests/: test_adblock_integration.rs  test_api_compatibility.rs  test_complete_workflows.rs  test_message_bus_integration.rs  test_network_integration.rs
integration_tests/tests/common/: mod.rs
orchestration/: MIGRATION_LOG.json  adr_generator.py  component-list.json  component_splitter.py  context_manager.py  contract_analyzer.py  contract_checker.py  contract_validator.py  generate_completion_report.py  migration_manager.py  orchestrate_enforced.py  orchestration-config.json  progress_preserver_config.json  project-metadata.json  quality_metrics.py  specification_verifier.py  state_discovery.py  workflow_orchestrator.py
orchestration/analysis/: compliance_checker.py  language_detector.py  markdown_parser.py  spec_reconciler.py  specification_analyzer.py  structure_analyzer.py
orchestration/checkpoints/: checkpoint_manager.py  orchestration_checkpoint.py  orchestration_state.py  orchestration_with_checkpoints.py  resume_confirmation.py  resume_display.py  resume_orchestration.py  session_continuation.py  state_discovery.py
orchestration/cli/: auto_init.py  check_naming.py  create_component.py  git_retry.py  git_status.py  install_manager.py  onboard_preflight.py  self_check_repo.py  session_init.py  spec_discovery.py  uninstall.py  (+2 more)
resources/: init.js
scripts/: check-performance.sh  generate_icons.rs  run-wpt.sh
shared-libs/: .gitkeep  README.md
specifications/: frankenstein-browser-specification.md  llm-extraction-specification.md
tests/: acid1_test.rs  build_tests.rs  end_to_end_test.rs  phase1-tests.txt  validation_tests.rs  wpt_integration_test.rs
wpt_adapter/: frankenbrowser.py
(+232 files in other folders)
