[workspace]
resolver = "2"

members = [
    "components/shared_types",
    "components/message_bus",
    "components/config_manager",
    "components/network_stack",
    "components/adblock_engine",
    "components/browser_core",
    "components/webview_integration",
    "components/browser_shell",
    "components/webdriver",
    "components/cli_app",
    "integration_tests",
    "benchmarks",
]

[package]
name = "frankenbrowser"
version = "0.1.0"
edition = "2021"
authors = ["Browser Team"]
license = "MIT OR Apache-2.0"
publish = false

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Browser Team"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Shared dependencies across workspace
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# Networking
reqwest = { version = "0.11", features = ["blocking", "cookies", "gzip", "brotli", "json", "stream"] }
url = "2.5"
cookie_store = "0.20"

# Ad blocking
adblock = "0.8"

# Database
rusqlite = { version = "0.30", features = ["bundled"] }

# Base64 encoding/decoding
base64 = "0.21"

# IPC
crossbeam-channel = "0.5"

# UI
wry = "0.35"
tao = "0.25"
egui = "0.24"
eframe = "0.24"

# Config
toml = "0.8"

# Pattern matching and UUIDs
regex = "1.10"
uuid = { version = "1.6", features = ["v4", "serde"] }

# File system operations
walkdir = "2.4"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true }
regex = { workspace = true }
rusqlite = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
# Workspace components for testing
shared-types = { path = "components/shared_types" }
message-bus = { path = "components/message_bus" }
config-manager = { path = "components/config_manager" }
network-stack = { path = "components/network_stack" }
adblock-engine = { path = "components/adblock_engine" }
browser-core = { path = "components/browser_core" }
browser-shell = { path = "components/browser_shell" }
url = { workspace = true }

[build-dependencies]
reqwest = { version = "0.11", features = ["blocking"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
