[package]
name = "adblock-engine"
version = "0.1.0"
edition = "2021"
authors = ["Browser Team"]
license = "MIT OR Apache-2.0"

[dependencies]
shared-types = { path = "../shared_types" }
message-bus = { path = "../message_bus" }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
adblock = "0.8"

[dev-dependencies]
tokio = { version = "1.35", features = ["test-util", "macros"] }

[lib]
path = "src/lib.rs"
