[package]
name = "browser-core"
version = "0.1.0"
edition = "2021"
authors = ["Browser Team"]
license = "MIT OR Apache-2.0"

[dependencies]
shared-types = { path = "../shared_types" }
message-bus = { path = "../message_bus" }
network-stack = { path = "../network_stack" }
config-manager = { path = "../config_manager" }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
rusqlite = { version = "0.30", features = ["bundled"] }
url = "2.5"
base64 = "0.21"

[dev-dependencies]
tokio = { version = "1.35", features = ["test-util", "macros"] }
serde_json = "1.0"

[lib]
path = "src/lib.rs"
