[package]
name = "browser-shell"
version = "0.1.0"
edition = "2021"
authors = ["Browser Team"]
license = "MIT OR Apache-2.0"

[dependencies]
shared-types = { path = "../shared_types" }
message-bus = { path = "../message_bus" }
config-manager = { path = "../config_manager" }
network-stack = { path = "../network_stack" }
adblock-engine = { path = "../adblock_engine" }
browser-core = { path = "../browser_core" }
webview-integration = { path = "../webview_integration" }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.35", features = ["full"] }
url = "2.5"

# GUI dependencies - optional for headless environments
# Using latest wry with webkit2gtk-4.1 support
wry = { version = "0.53", optional = true, default-features = false, features = ["linux-body", "protocol"] }
tao = { version = "0.34", optional = true }
egui = { version = "0.24", optional = true }
eframe = { version = "0.24", optional = true }

[features]
default = []
gui = ["wry", "tao", "egui", "eframe"]

[dev-dependencies]
tokio = { version = "1.35", features = ["test-util", "macros"] }

[lib]
path = "src/lib.rs"
