[package]
name = "message-bus"
version = "0.1.0"
edition = "2021"
authors = ["Browser Team"]
license = "MIT OR Apache-2.0"

[dependencies]
shared-types = { path = "../shared_types" }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
crossbeam-channel = "0.5"
tokio = { version = "1.35", features = ["full"] }

[dev-dependencies]
tokio = { version = "1.35", features = ["test-util", "macros"] }
url = "2.5"

[lib]
path = "src/lib.rs"
