[package]
name = "shared-types"
version = "0.1.0"
edition = "2021"
authors = ["Browser Team"]
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.35", features = ["test-util", "macros"] }

[lib]
path = "src/lib.rs"
