[package]
name = "shared-types"
version = "0.1.0"
edition = "2021"
authors = ["Browser Team"]
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
url = { version = "2.5", features = ["serde"] }
static_assertions = "1.1"

[dev-dependencies]
tokio = { version = "1.35", features = ["test-util", "macros"] }
serde_json = "1.0"

[lib]
path = "src/lib.rs"
