[package]
name = "webview-integration"
version = "0.1.0"
edition = "2021"
authors = ["Browser Team"]
license = "MIT OR Apache-2.0"

[dependencies]
shared-types = { path = "../shared_types" }
message-bus = { path = "../message_bus" }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
wry = { version = "0.24", optional = true }
tao = { version = "0.16", optional = true }

[dev-dependencies]
tokio = { version = "1.35", features = ["test-util", "macros"] }

[features]
default = []
gui = ["wry", "tao"]

[lib]
path = "src/lib.rs"
